--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^3.4.4",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
   },
@@ -24,7 +24,8 @@
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3"
+    "eslint-plugin-react": "^7.18.3",
+    "nan": "^2.14.1"
   },
   "eslintConfig": {
     "extends": "react-app"
