--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "immer": ">=8.0.1",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
+    "immer": ">=8.0.1",
     "nan": "^2.14.1"
   },
   "eslintConfig": {
