--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -7,6 +7,8 @@
     "immer": ">=8.0.1",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
+    "node-notifier": ">=8.0.1",
+    "object-path": ">=0.11.5",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -26,7 +28,6 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
-    "immer": ">=8.0.1",
     "nan": "^2.14.1"
   },
   "eslintConfig": {
